main components built commit

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -6,7 +6,7 @@
     align-items: center;
 }
 
-@mixin card-nav-style {
+@mixin card-style {
     width: 80vw;
     margin: 50px auto ;
     border: 1px solid black;
