--- a/src/scss/components/_CurrentCard.scss
+++ b/src/scss/components/_CurrentCard.scss
@@ -1,5 +1,6 @@
 .currentCard {
-    @include card-nav-style;
+    @include card-style;
+
     height: 400px;
     @include center;
     flex-direction: column;
