--- a/src/scss/components/_ForecastCard.scss
+++ b/src/scss/components/_ForecastCard.scss
@@ -25,8 +25,10 @@
     .bodyTomorrow {
         display: flex;
         flex-direction: row;
+
         .forecastItems {
             margin: 30px 20px;
+            flex-grow: 1;
         }
 
     }
