--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 //Variables
 
 // colors
-$transparent-white: rgba(255, 255, 255, 0.603)
+$transparent-white: rgba(255, 255, 255, 0.603);
+$transparent-blue: rgba(135, 206, 250, 0.637);
+$lightblue: lightskyblue
 // sizes
 
 // others
