--- a/src/scss/components/_ForecastCard.scss
+++ b/src/scss/components/_ForecastCard.scss
@@ -9,7 +9,7 @@
     }
 
     .title {
-        background-color: rgba(135, 206, 250, 0.637);
+        background-color: $transparent-blue;
         height: 40px;
         padding: 15px;
     }
