--- a/src/scss/components/_MyNav.scss
+++ b/src/scss/components/_MyNav.scss
@@ -8,7 +8,7 @@
                 @include a
             }
             .active {
-                color: lightskyblue;
+                color: $lightblue;
             }
         }
     }
