notification and readme

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,7 +3,8 @@
 // colors
 $transparent-white: rgba(255, 255, 255, 0.603);
 $transparent-blue: rgba(135, 206, 250, 0.637);
-$lightblue: lightskyblue
+$lightblue: lightskyblue;
+$sec-col: rgb(255, 151, 139)
 // sizes
 
 // others
