--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -5,5 +5,5 @@
 @import './SearchBar';
 @import './MyNav';
 @import './CurrentCard';
-@import './Clouds';
-@import './ForecastCard'
+@import './ForecastCard';
+@import './Notification'
