--- a/src/scss/components/_Notification.scss
+++ b/src/scss/components/_Notification.scss
@@ -8,5 +8,6 @@
     box-shadow: 0px 0px 10px $sec-col;
     display: flex;
     @include center;
-    
+    text-align: center;
+    padding: 20px;
 }
