--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -6,4 +6,7 @@
 @import './MyNav';
 @import './CurrentCard';
 @import './ForecastCard';
-@import './Notification'
+@import './Notification';
+@import './Clouds';
+@import './Cursor';
+@import './Sound'
